# talk-wall

./: .gitignore  Cargo.toml  LICENSE  README.md  config.toml
frontend/: index.html  package.json
frontend/src/: App.svelte  app.css  main.js
frontend/src/lib/: api.js
src/: main.rs
