[package]
name = "talk-wall"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = { version = "0.7", features = ["macros", "json"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1", features = ["full"] }
sqlx = { version = "0.7", features = ["runtime-tokio-rustls", "sqlite", "macros"] }
argon2 = "0.5"
rand_core = { version = "0.6", features = ["getrandom"] }
tower-cookies = "0.9"
uuid = { version = "1", features = ["v4"] }
thiserror = "1.0"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["fmt", "env-filter"] }
time = { version = "0.3", features = ["formatting", "serde-human-readable"] }
toml = "0.8"
tower-http = { version = "0.5", features = ["fs"] }
